# Library-Mangement-Sytem-GUI

./: CMakeLists.txt  Personcls.cpp  README.md  clsBook.h  clsUser.h  index.cpp  main.cpp  main.txt
includes/: Bookcls.cpp  Bookcls.h  Personcls.h
page/: addBookPage.cpp  addBookPage.h  homePage.h  loginPage.h  registerPage.cpp  registerPage.h
